Rende l'app desktop un modulo Java pulito e la impacchetta come .app nativa
Sostituisce Jackson con un parser JSON scritto a mano (util/Json.java):
Jackson è distribuito come "modulo automatico", che jlink non può includere
in un runtime nativo, il che rompeva jpackage con un errore criptico
("componenti runtime JavaFX mancanti") causato in realtà da una risoluzione
sbagliata dei jar nativi di JavaFX durante lo shading, non da Jackson in
sé — ma restare a dipendenza zero elimina il problema alla radice e rende
l'app un vero modulo (module-info.java: richiede solo javafx.*).

Aggiunge un'icona (src/main/resources/icon/) e documenta nel README la
build jlink/jpackage che funziona in modo affidabile (module-path con i
jar JavaFX per piattaforma, non un jar "fat"), incluso l'accorgimento per
firmare il bundle quando si costruisce dentro una cartella sincronizzata
con iCloud Drive.

Verificato: smoke test pulito, e l'app installata in /Applications resta
stabile all'avvio (prima usciva silenziosamente dopo pochi secondi).