@@ -30,44 +30,68 @@ cd desktop
 ./mvnw package
 ```
 
-Produce `target/regia-desktop.jar` (jar "fat", tutte le dipendenze incluse).
-Per via di come JavaFX gestisce i moduli nativi, questo jar **non** si avvia
-con `java -jar` da solo — usa sempre `./mvnw javafx:run`, oppure genera
-un'app nativa con jpackage (sotto).
+Produce `target/regia-desktop.jar` e `target/classes` (con `module-info.class`:
+l'app è un modulo Java pulito — solo JavaFX come dipendenza esterna, nessun
+altro jar necessario — il parsing JSON e l'export .xlsx sono scritti a mano,
+vedi `util/Json.java` e `util/XlsxWriter.java`).
 
-### App nativa macOS (.app)
+### App nativa macOS (.app), via jlink/jpackage
+
+Il modo che funziona in modo affidabile è passare a jpackage il **module-path**
+(non un jar "fat" — i jar JavaFX di Maven senza classificatore sono stub vuoti
+di poche centinaia di byte; quelli veri hanno il classificatore della
+piattaforma, es. `-mac-aarch64`):
 
 ```bash
 ./mvnw package
-mkdir -p target/jpackage-input && cp target/regia-desktop.jar target/jpackage-input/
-jpackage --type app-image --input target/jpackage-input --dest dist \
-  --name "Bottega Norris Regia" --main-jar regia-desktop.jar \
-  --main-class it.bottenorris.regia.Main --app-version 1.0.0
+M2=~/.m2/repository
+mkdir -p /tmp/bn-mp
+cp "$M2"/org/openjfx/javafx-{base,controls,graphics}/21.0.2/javafx-*-21.0.2-mac-aarch64.jar /tmp/bn-mp/
+
+jpackage --type app-image --dest dist \
+  --name "Bottega Norris Regia" \
+  --module-path "target/classes:/tmp/bn-mp" \
+  --module it.bottenorris.regia/it.bottenorris.regia.Main \
+  --app-version 1.0.0 \
+  --icon src/main/resources/icon/BottegaNorrisRegia.icns
 ```
 
-Su Apple Silicon, se l'app non si apre (killata subito dopo l'avvio), è quasi
-sempre perché il bundle non è firmato correttamente — su macOS un eseguibile
-arm64 dev'essere firmato anche solo ad-hoc per partire:
+(su un Mac Intel, sostituisci `mac-aarch64` con `mac`; su un chip diverso
+guarda quale classificatore compare in `~/.m2/repository/org/openjfx/javafx-base/21.0.2/`
+dopo aver lanciato `./mvnw javafx:run` almeno una volta, che lo scarica in
+automatico).
+
+Se costruisci dentro una cartella sincronizzata con iCloud Drive (es. dentro
+`~/Desktop`), la firma può fallire con `resource fork, Finder information...
+not allowed`: è un conflitto fra iCloud e `codesign`, non un problema del
+progetto. Costruisci altrove (es. `/tmp`) e poi sposta il risultato, oppure:
 ```bash
 xattr -cr "dist/Bottega Norris Regia.app"
 codesign -s - --deep --force "dist/Bottega Norris Regia.app"
 ```
 
+Per installarla: `cp -R "dist/Bottega Norris Regia.app" /Applications/`.
+
 ## Struttura del codice
 
 ```
+src/main/java/module-info.java  Dichiara il modulo: richiede solo javafx.controls/graphics/base
 src/main/java/it/bottenorris/regia/
   Main.java              Shell dell'app: header, barra dati, TabPane con le 5 viste
   SmokeTest.java          Strumento di verifica manuale: costruisce e renderizza
                            tutte le viste senza aprire finestra, stampa OK/eccezione
-                           per ciascuna. Non è un test automatico (niente JUnit):
-                           lancialo con `./mvnw -o javafx:run -Djavafx.mainClass=...`
-                           sostituendo temporaneamente <mainClass> nel pom, oppure
-                           via `java --module-path ... SmokeTest` (vedi git history).
+                           per ciascuna. Non è un test automatico (niente JUnit).
+                           Lancialo con (dopo ./mvnw package, che scarica i jar JavaFX):
+                             JH=$(/usr/libexec/java_home -v 21); M2=~/.m2/repository
+                             "$JH/bin/java" --module-path "$M2/org/openjfx/javafx-base/21.0.2/javafx-base-21.0.2-mac-aarch64.jar:$M2/org/openjfx/javafx-controls/21.0.2/javafx-controls-21.0.2-mac-aarch64.jar:$M2/org/openjfx/javafx-graphics/21.0.2/javafx-graphics-21.0.2-mac-aarch64.jar:target/classes" \
+                               --add-modules javafx.base,javafx.controls,javafx.graphics \
+                               --module it.bottenorris.regia/it.bottenorris.regia.SmokeTest
   model/                 CostoRecord, FerieRecord, DsRecord, DataStore — stesso
                            schema dei dataset della web app (vedi ../docs/05-*)
   data/DataLoader.java    Carica dati demo o override locali (JSON)
   util/
+    Json.java              Parser JSON scritto a mano (nessuna dipendenza esterna,
+                           serve a restare un modulo Java pulito per jlink/jpackage)
     CalcUtils.java        Aggregazioni e formattazione (porta di tally()/eur()/... )
     BudgetEngine.java      Motore di proiezione Budget (porta di _computeBASE/
                            projectFunc/projectAll di js/budget.js, calibrazione CAL inclusa)
